scifi.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 12907,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.86,
  "homepage_snapshot_redirected_domain": "scifi.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060409174940/http://www.scifi.com/home/noflash.html",
  "homepage_snapshot_url": "https://web.archive.org/web/20060405035331id_/http%3A//scifi.com",
  "interval": "2006_A",
  "link_text": "PRIVACY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "scifi.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615011531id_/http%3A//www.scifi.com/terms/privacy.html",
  "policy_title": "SCIFI.COM | Terms - Privacy Statement",
  "policy_url": "scifi.com/terms/privacy.html",
  "sha1": "6c42a800ebce00f208a96177e94381e806ab96a8",
  "simhash": 16565760108595277330,
  "simhash_updated": false,
  "site_hostname": "scifi.com",
  "site_url": "http://scifi.com",
  "smog": 15.73,
  "strict_updated": false,
  "timestamp": "20060615011531",
  "word_count": 2013,
  "year": 2006
}

--- a/s/sc/sci/scifi.com.html
+++ b/s/sc/sci/scifi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scifi.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228160748id_/http%3A//www.scifi.com/terms/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scifi.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615011531id_/http%3A//www.scifi.com/terms/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>SCIFI.COM | Terms - Privacy Statement</title>
@@ -65,29 +65,21 @@ td {
         
     
 
+<center><table border="0" width="765" height="109" cellpadding="0" cellspacing="0 bgcolor=" #ffffff"=""><tbody><tr><td width="765" height="109" background="/images/header_fade.jpg" align="center" valign="middle" alt="header background">
 
-<div align="center">
-<table border="0" width="765" height="149" cellpadding="0" cellspacing="0 bgcolor=" #ffffff"=""><tbody><tr><td width="765" height="109" background="/images/header_fade.jpg" align="center" valign="middle" alt="header background">
+<!-- BEGIN: AdSolution-Tag 4.3: Global-Code [PLACE IN HTML-HEAD-AREA!] -->
+		<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslmain.js"></script>
+<!-- END: AdSolution-Tag 4.3: Global-Code -->
 
-<!-- 1x1 ad --><!-- BEGIN: AdSolution-Tag 4.1: Global-Code [PLACE IN HTML-HEAD-AREA!] -->
-<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslmain.js"></script>
-<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslsubs111.js"></script>
-
-<script language="JavaScript" type="text/javascript">
-Ads_kid=0;Ads_bid=0;Ads_xl=0;Ads_yl=0;Ads_xp='';Ads_yp='';Ads_opt=0;Ads_wrd='';Ads_prf='';Ads_par='';Ads_cnturl='';Ads_sec=0;Ads_channels='';
+<!-- BEGIN: AdSolution-Website-Tag 4.3 : SCIFI.com / ros_728x90 -->
+<script language="javascript" type="text/javascript">
+Ads_kid=0;Ads_bid=0;Ads_xl=728;Ads_yl=90;Ads_xp='';Ads_yp='';Ads_xp1='';Ads_yp1='';Ads_opt=0;Ads_wrd='[KeyWord]';Ads_prf='';Ads_par='';Ads_cnturl='';Ads_sec=0;Ads_channels='';
 </script>
-<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/njf/39/scifi.com/scifi.usa.com-other-pixel.js"></script>
-<!-- END:AdSolution-Tag 4.1 --><script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslmain.js"></script>
-<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslsubs111.js"></script>
-<script language="JavaScript" type="text/javascript">
-Ads_kid=0;Ads_bid=0;Ads_xl=728;Ads_yl=90;Ads_xp='';Ads_yp='';Ads_opt=0;Ads_wrd='';Ads_prf='';Ads_par='';Ads_cnturl='';Ads_sec=0;Ads_channels='';
-</script>
-<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/njf/39/scifi.com/scifi.usa.com-ros-728x90.js"></script>
+<script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/njf/126/scifi.com/ros_728x90.js"></script>
+<!-- END:AdSolution-Tag 4.3 -->
+</td></tr></tbody></table>
 
-</td></tr>
-	
-<tr><td><img src="/images/header_nav.gif" width="765" height="40" border="0" alt="scifi.com navigation" usemap="#topnav_imagemap"><map name="topnav_imagemap"><area shape="rect" alt="scifi.com" coords="6,7,132,32" href="http://www.scifi.com/"><area shape="rect" alt="newsletter" coords="657,8,746,16" href="/members/"><area shape="rect" alt="downloads" coords="573,8,641,16" href="/downloads/"><area shape="rect" alt="feedback" coords="502,8,556,16" href="/feedback/"><area shape="rect" alt="search" coords="444,8,486,16" href="http://search.scifi.com/"><area shape="rect" alt="faq" coords="401,8,427,16" href="/feedback/FAQ1.html"><area shape="rect" alt="bboard" coords="694,24,747,33" href="http://mboard.scifi.com/"><area shape="rect" alt="scifi weekly" coords="593,24,672,33" href="/sfweekly/"><area shape="rect" alt="scifi wire" coords="505,24,571,33" href="/scifiwire/"><area shape="rect" alt="schedule" coords="421,24,484,33" href="/schedulebot/"><area shape="rect" alt="movies" coords="348,24,400,33" href="/onair/movies/"><area shape="rect" alt="shows" coords="277,24,329,33" href="/onair/shows/"></map></td></tr></tbody></table><center>
-
+<table border="0" width="765" height="40" cellpadding="0" cellspacing="0"><tbody><tr><td><img src="/images/header_nav.jpg" width="765" height="40" border="0" alt="scifi.com navigation" usemap="#topnav_imagemap"><map name="topnav_imagemap"><area shape="rect" alt="" coords="657,7,758,17" href="/members/"><area shape="rect" alt="" coords="556,7,638,17" href="/downloads/"><area shape="rect" alt="" coords="475,7,540,17" href="/feedback/"><area shape="rect" alt="" coords="407,7,458,17" href="/pingserver.php"><area shape="rect" alt="" coords="357,7,390,17" href="/feedback/FAQ1.html"><area shape="rect" alt="" coords="705,24,758,35" href="http://mboard.scifi.com/"><area shape="rect" alt="" coords="624,24,691,35" href="http://blog.scifi.com/tech/"><area shape="rect" alt="" coords="526,24,609,35" href="/sfweekly/"><area shape="rect" alt="" coords="448,24,516,35" href="/scifiwire/"><area shape="rect" alt="" coords="371,24,435,35" href="/schedulebot/"><area shape="rect" alt="" coords="304,24,357,35" href="/onair/movies/"><area shape="rect" alt="" coords="241,24,294,35" href="/onair/shows/"><area shape="rect" alt="" coords="149,24,229,35" href="/pulse/"><area shape="rect" alt="" coords="9,7,136,35" href="http://www.scifi.com/"></map></td></tr></tbody></table></center>
 
 <table width="765" border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
@@ -383,4 +375,4 @@ This Privacy Statement may be updated as SCIFI.COM introduces new products and s
 </center>
 
 
-</div></center></body></html>
+</body></html>
