nextdaypets.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 8769,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.24,
  "homepage_snapshot_redirected_domain": "nextdaypets.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060404235539id_/http://www.nextdaypets.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060404235539id_/http%3A//nextdaypets.com",
  "interval": "2006_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "nextdaypets.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615011618id_/http%3A//www.nextdaypets.com/privacy.aspx",
  "policy_title": "Dogs & Puppies - Next Day Pets",
  "policy_url": "nextdaypets.com/privacy.aspx",
  "sha1": "5622c01e6f70e98366cc675b7f36910ac0690310",
  "simhash": 694488753852588842,
  "simhash_updated": false,
  "site_hostname": "nextdaypets.com",
  "site_url": "http://nextdaypets.com",
  "smog": 13.24,
  "strict_updated": false,
  "timestamp": "20060615011618",
  "word_count": 1492,
  "year": 2006
}

--- a/n/ne/nex/nextdaypets.com.html
+++ b/n/ne/nex/nextdaypets.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nextdaypets.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219072450id_/http%3A//www.nextdaypets.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nextdaypets.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615011618id_/http%3A//www.nextdaypets.com/privacy.aspx) for the most accurate reproduction.-->
 
 <html><head>
 <title>Dogs &amp; Puppies - Next Day Pets</title>
@@ -13,6 +13,12 @@
 
 </script>
 
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-137712-1";
+urchinTracker();
+</script> 
 </head>
 <body background="/newimages/bg.gif" topmargin="0" rightmargin="0" leftmargin="0" bottommargin="0">
 <table width="780" border="0" cellspacing="0" cellpadding="0" background="/newimages/bg.gif">
@@ -209,7 +215,21 @@
             <p> By accepting the User Agreement you expressly agree to accept 
               the terms of our Privacy Policy and to receive this information 
               described herein. If you break the law, we may have to disclose 
-              your personal information to the authorities. </p><br>
+              your personal information to the authorities. </p>
+                  <p><span class="txtPurple12"><b>THIRD PARTY ADVERTISING</b></span><br>
+                    We use MaxOnline and other third-party 
+advertising companies to serve ads when you visit our Web site. These companies 
+may use information (not including your name, address, email address or 
+telephone number) about your visits to this and other Web sites in order to 
+provide advertisements on this site and other sites about goods and services 
+that may be of interest to you. If you would like more information about this 
+practice and to know your choices about not having this information used by 
+these companies, please <a href="http://www.maxonline.com/privacy_policy/index.php" target="_blank">click 
+here</a>.</p>
+                  <p><span class="txtPurple12"><b>THIRD PARTY COOKIES</b></span><br>
+                    In the course of serving 
+advertisements to this site, our third-party advertiser may place or recognize a 
+unique "cookie" on your browser.</p>			  
 			  	  </td>
                 </tr>
               </tbody></table>
@@ -469,8 +489,7 @@
           <td width="47%" rowspan="2" align="right"><img src="/newimages/dog_gifts.gif" width="68" height="48"></td>
         </tr>
         <tr> 
-          <td valign="bottom" class="txtblacktext11"><span class="txtGreen11">Price 
-            varies</span></td>
+          <td valign="bottom" class="txtblacktext11"><span class="txtGreen11">Price varies</span></td>
         </tr>
       </tbody></table></td>
   </tr>
@@ -478,28 +497,7 @@
     <td align="right" style="padding-left:0px;padding-top:10px;padding-right:10px;padding-bottom:7px;" bgcolor="#FFFFFF"><a href="/directory/pet_supplies/dog_gifts/"><img src="/newimages/btn_dogs_more.gif" alt="" width="37" height="11" border="0"></a></td>
   </tr>
 	<tr><td height="1" background="/newimages/line_updowngrey.gif" colspan="2"><img alt="" src="/newimages/line_updowngrey.gif" width="1"></td></tr>
-		<tr><td align="center" style="padding-top:30px;padding-bottom:10px;" colspan="2">
-			<table width="181" border="0" cellspacing="0" height="620" cellpadding="0">
-				<tbody><tr> 
-				  <td height="620" align="center" valign="middle" background="/newimages/dogs_for_sale_google.gif">
-					<script type="text/javascript"><!--
-					google_ad_client = "pub-9613241096752487";
-					google_ad_width = 160;
-					google_ad_height = 600;
-					google_ad_format = "160x600_as";
-					google_ad_channel ="";
-					google_color_border = "DCE8C5";
-					google_color_bg = "FFFFFF";
-					google_color_link = "DCE8C5";
-					google_color_url = "008000";
-					google_color_text = "000000";
-					//--></script>
-					<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-					</script>		  
-				  </td>
-				</tr>
-			  </tbody></table>
-		</td></tr>
+
       </tbody></table>
  
 			<!--end LeftNav -->
@@ -519,8 +517,10 @@
     <td colspan="2" height="20" background="/newimages/bg_lightpurple.gif">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="2" style="padding-top:4px;padding-bottom:10px;" class="txtGray11" align="center">Copyright © 2003-2005 Next Day Pets, L.L.C., All Rights Reserved</td>
-  </tr> 
+    <td colspan="2" style="padding-top:4px;padding-bottom:10px;" class="txtGray11" align="center">Copyright © 2003-2006 Next Day Pets, L.L.C., All Rights Reserved
+	</td>
+  </tr>
+ 
 			<!--end Bottom -->
 </tbody></table>
 
