--- a/n/ny/nyh/nyhabitat.com.html
+++ b/n/ny/nyh/nyhabitat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nyhabitat.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212135332id_/http%3A//www.nyhabitat.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nyhabitat.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615011701id_/http%3A//nyhabitat.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy statement</title>
@@ -12,15 +12,16 @@
 
 <link rel="stylesheet" href="/css/nyh.css">
 </head>
-<body link="#0000ff" vlink="#0000ff" alink="#0000ff" text="#000000" background="/images/backstuc.gif" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
-<!--  
-removed: /index.html-->
+<body text="#000000" background="/images/backstuc.gif">
 
 <!-- table header -->    
-<center><table cellpadding="0" cellspacing="0" width="720"><tbody><tr>
-<td valign="top" width="100"><a href="/index.html" target="_top"><img src="/images/logo_nyh.jpg" width="100" height="100" border="0" alt="New York Habitat"></a></td>
-<td valign="top">
-<p align="right"><img width="600" height="19" border="0" src="/images/menuserv600.gif" usemap="#menuserv">
+<center>
+	<table width="720" cellspacing="0" cellpadding="0">
+		<tbody><tr>
+		<td width="100" valign="top">
+			<a href="/" target="_top"><img src="/images/logo_nyh.jpg" width="100" height="100" border="0" alt="New York Habitat"></a></td>
+		<td valign="top">
+			<div align="right"><img width="600" height="19" border="0" src="/images/menuserv600.gif" usemap="#menuserv" alt="">
 <map name="menuserv">
 <area shape="rect" coords="240,0,323,19" href="/new-york-apartment.html" alt="New York Apartments">
 <area shape="rect" coords="335,0,378,19" href="/paris-apartment.html" alt="Paris Apartments">
@@ -28,24 +29,26 @@ removed: /index.html-->
 <area shape="rect" coords="462,0,598,19" href="/south-france-apartment.html" alt="South of France Apartments">
 </map>
 
-<br><img src="/images/clear.gif" width="1" height="10">
-</p><p align="center"><font class="titleB"><b>
-PRIVACY STATEMENT
-
-
-
-
-</b></font><br><img src="/images/clear.gif" width="1" height="10">
-
-<br><b><font class="biline">"THE BEST SUBLET SERVICE IN NEW YORK"</font>
+</div>
+			<center>
+			<h1 align="center">PRIVACY STATEMENT</h1>
+		
+<b>
+<font class="biline">"THE BEST SUBLET SERVICE IN NEW YORK"</font>
 <font class="biline2"><i>New York Magazine</i></font>
 </b>
-</p></td>
+		
+
+</center>
+</td>
 </tr></tbody></table>
 <!-- //table header -->
 
-<!-- master table starts --><table cellpadding="0" cellspacing="0" width="720" border="0"><tbody><tr><td>
-<!--CONTENT STARTS-->
+<!-- master table starts -->
+	<table width="720" border="0" cellspacing="0" cellpadding="0">
+	<tbody><tr>
+		<td>
+	<!--CONTENT STARTS-->
 <!-- edit -->
 
 <br>
@@ -98,8 +101,7 @@ THE WAY WE USE COOKIES :
 
 <font class="normal">
 
-</font><p><font class="normal">Cookies are small pieces of information that some web sites ask to store on (and later retrieve from) your computer. When you visit New York Habitat website, a single cookie is stored into your browser, provided your browser accepts it. The information stored on this cookie contains a randomly generated string but no personal information. This cookie will allow you to retrieve previously selected preferences (if any) each time you come back visiting our website.
-<br>Cookies on our website are sent by our server only and expire after 100 days.
+</font><p><font class="normal">Cookies are small pieces of information that some web sites ask to store on (and later retrieve from) your computer. When you visit New York Habitat website, cookies are stored into your browser, provided your browser accepts them. The information stored on those cookies contains a randomly generated string but no personal information. Those cookies will allow you to retrieve previously selected preferences (if any) each time you come back visiting our website. Additionally, we may use cookies and third parties applications from time to time to build statistics using information such as browser, URL, IP address.
                                     
 </font>
 <!-- end  privacy -->
@@ -179,13 +181,7 @@ HOW TO CONTACT US :
 
                 
 <br><br>
-<!-- //edit -->
-
-
-
-
-
-<br></p><hr width="200"><br>
+<!-- //edit --><br></p><hr width="200"><br>
 
 <!-- nav starts here -->
 
@@ -194,15 +190,15 @@ HOW TO CONTACT US :
 <!--<br><hr width="200"><br>-->
 
 <!--  
-removed: /index.html-->
+removed: /-->
 
-<a href="/index.html">HOME</a>
+<a href="/">HOME</a>
 
 
-&nbsp; &nbsp; <img src="/images/bullet.gif" width="5" height="5" border="0" align="center"> &nbsp; &nbsp; 
+&nbsp; &nbsp; <img src="/images/bullet.gif" width="5" height="5" border="0" alt=""> &nbsp; &nbsp; 
 <a href="/about-us.html">About us</a>
 
-&nbsp; &nbsp; <img src="/images/bullet.gif" width="5" height="5" border="0" align="center"> &nbsp; &nbsp; 
+&nbsp; &nbsp; <img src="/images/bullet.gif" width="5" height="5" border="0" alt=""> &nbsp; &nbsp; 
 <a href="/media-press.html">Media reports</a>
 
 
@@ -213,16 +209,32 @@ removed: /index.html-->
 <table><tbody><tr><td class="small" align="left">All information regarding properties on this website is from sources deemed reliable. It is submitted subject to errors, omissions, change of price, commission or conditions, or withdrawal without notice. Photographs, descriptions and information about the properties reflect conditions at the time the photographs were taken or the descriptions or information obtained.</td></tr></tbody></table>
 <hr>
 
-<table border="0" width="720" cellspacing="0" cellpadding="0" align="center"><tbody><tr><td align="center" class="small"> 
-<!--contact-->
+<table width="720" border="0" cellspacing="0" cellpadding="0" align="center">
+<tbody><tr>
+	<td align="center" class="small"> 
+		<!--contact-->
 <font class="small">
-<a href="mailto:info@nyhabitat.com"><font color="blue">info@nyhabitat.com</font></a> 
-| <a href="/feedback.html?hl=" onmouseover=" window.status='Talk to us'; return true" onmouseout="window.status=' '; return true" onclick="msgWindow=window.open (&quot;/feedback.html?hl=&quot;,&quot;window9&quot;,&quot;toolbar=no,location=no,directories=no,status=yes,menubar=no,scrollbars=yes,resizable=yes,width=500,height=400&quot;);return false"><font color="blue">Feedback</font></a>
-| <a href="mailto:webmaster@nyhabitat.com"><font color="blue">webmaster@nyhabitat.com</font></a> 
+	<a href="/site-map.html">Site Map</a> | 
+	<a href="/feedback.html?hl=" onmouseover=" window.status='Contact Us'; return true" onmouseout="window.status=' '; return true" onclick="msgWindow=window.open (&quot;/feedback.html?hl=&quot;,&quot;window9&quot;,&quot;toolbar=no,location=no,directories=no,status=yes,menubar=no,scrollbars=yes,resizable=yes,width=500,height=400&quot;);return false"><font color="#0000FF">Contact Us</font></a>
 | Phone: <b>(212) 255-8018</b> Fax: (212) 627-1416 
- </font></td></tr><tr><td align="center">
-<!--copyright-->
-<font class="small"><a href="/privacy.html">Privacy</a> - Copyright ©2005 New York Habitat, 307 Seventh Avenue, Suite 306, New York, NY 10001. USA.</font><p><br></p></td></tr></tbody></table><!--CONTENT ENDS-->
+ </font>	</td>
+</tr>
+<tr>
+	<td align="center">
+	<!--copyright-->
+<font class="small"><a href="/privacy.html">Privacy</a> - Copyright ©2006 New York Habitat, 307 Seventh Avenue, Suite 306, New York, NY 10001. USA.</font>	<br><br>
+	</td>
+</tr>
+</tbody></table><!--CONTENT ENDS-->
 <!-- master table ends --></td></tr></tbody></table></center>
+
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-227612-1";
+urchinTracker();
+</script>
+
 
 </body></html>
