--- a/w/wi/wil/willmaster.com.html
+++ b/w/wi/wil/willmaster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the willmaster.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215104802id_/http%3A//bontragerconnection.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the willmaster.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615011847id_/http%3A//bontragerconnection.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Bontrager Connection Privacy Statement</title>
@@ -8,40 +8,17 @@ if (self != top) { top.location = self.location; }
 // --></script>
 
 
-<link rel="stylesheet" type="text/css" href="http://bontragerconnection.com/05bcstyle.css"> 
+<link rel="stylesheet" type="text/css" href="http://bontragerconnection.com/06bcstyle.css"> 
 </head>
 <body>
+	<div id="header">
+
+<a href="http://bontragerconnection.com"><img src="http://www.bontragerconnection.com/05images/06bonconlogo.jpg" height="180" width="480" border="0" alt="Bontrager Connection"></a>
+
+</div>
 <div id="big">
-<div id="header">
-<div style="width:468px; float:right; margin-top:30px">
-<script type="text/javascript"><!--
-google_ad_client = "pub-5682027871056143";
-google_alternate_color = "D7D2C3";
-google_ad_width = 468;
-google_ad_height = 60;
-google_ad_format = "468x60_as";
-google_ad_type = "text";
-google_ad_channel ="6823424491";
-google_color_border = "D7D2C3";
-google_color_bg = "EFECE5";
-google_color_link = "993300";
-google_color_url = "003366";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></div>
-<a href="http://bontragerconnection.com"><img src="http://bontragerconnection.com/05images/05bonconlogo.jpg" height="120" width="200" border="0" alt="Bontrager Connection"></a>
 
-</div>
 
-<div id="contenttable">
-<div id="topnav">
-<a class="navbar" href="http://willmaster.com/master/">Master Series CGI</a>&nbsp;&nbsp;
-<a class="navbar" href="http://bontragercgi.com">Bontrager CGI</a>&nbsp;&nbsp;
-<a class="navbar" href="http://willmaster.com/support/">CGI Support Center</a>&nbsp;&nbsp;
-<a class="navbar" href="http://bontragerconnection.com/">The Possibilities Ezine</a>&nbsp;&nbsp;
-<a class="navbar" href="http://willmaster.com/vcc/">Valued Customer Club</a>
-</div>
 <table border="0" cellpadding="0" cellspacing="0" width="750">
 <tbody><tr><td width="250" class="blankcell">&nbsp;</td>
 <td width="500" class="pad20L" rowspan="2" valign="top">
@@ -142,76 +119,156 @@ BontragerConnection.com Web Site.</a>
 </div>
 </td></tr>
 <tr><td width="250" valign="top">
+<div class="center">
+<form method="POST" action="/cgi-bin/search/MasterSearch.cgi">
+<input type="hidden" name="rurl" value="http://bontragerconnection.com/searchresults.html">
+<h4>Search the <nobr>Bontrager Connection</nobr> Articles</h4>
+<p>"Put phrases in quotes"</p>
+<input type="TEXT" name="words" size="18"><br>
+<input type="SUBMIT" value="Search the Articles">
+</form></div>
 <div id="navigation">
 
-<a href="http://bontragerconnection.com/whatsnew/">
-<div style="padding: 5px; background-color: #EFECE5; color:#993300; font-size:12px; font-weight: bold; text-align:center; margin-top: 20px; margin-bottom: 10px;">
-Click! The Newest Additions</div></a>
+<h2>Web Development Resources</h2>
 
-<h3 class="center">Bontrager Connection Navigation</h3>
+<h4>
+<a href="http://willmaster.com/possibilities/">Possibilities Ezine</a> </h4>
+<script type="text/javascript" language="JavaScript"><!--
+function ReverseContentDisplay(d) {
+if(document.getElementById(d).style.display == "none") { document.getElementById(d).style.display = ""; }
+else { document.getElementById(d).style.display = "none"; }
+}
+//--></script>
+<div id="revealsubform" style="display:none;">
+<!-- SUBSCRIBE FORM -->
+<div class="center" style="border: 1px solid #D7D2C3;">
+<form name="a1133543239a" id="a1133543239a" action="http://willmaster.com/possibilities/cgi-bin/b-mailer/bmailerSubscribe.cgi" method="POST">
+<script language="JavaScript"><!-- 
+var v = new Date();
+document.write('<input type="hidden" name="subtzone" value="' + v.getTimezoneOffset() + '">');
+document.write('<input type="hidden" name="referrer" value="' + document.referrer + '">');
+document.write('<input type="hidden" name="subform" value="' + document.URL + '">');
+// --></script><input type="hidden" name="subtzone" value="0"><input type="hidden" name="referrer" value=""><input type="hidden" name="subform" value="https://web.archive.org/web/20060615011847id_/http%3A//bontragerconnection.com/privacy.shtml">
+<input type="hidden" name="Expiration" value="6m">
+<input type="hidden" name="FormTypeDefault" value="H">
+<input type="hidden" name="redirect" value="http://willmaster.com/possibilities/thsubscribe.shtml">
+<input type="text" name="subname" size="22" value="Name" onclick="javascript:f211335432392f('subname','Name');"><br>
+<input type="text" name="subemail" size="22" value="Email" onclick="javascript:f211335432392f('subemail','Email');">
+<div align="center">
 
+<span class="detail">(Optional name personalizes<br>
+your Possibilities Ezine.)<br>
+<br>
+<nobr><a href="http://willmaster.com/possibilities/sub/subscriptionTOS.shtml">Subscription Terms Of Service</a></nobr><br>
+<a href="http://bontragerconnection.com/privacy.shtml">Privacy Policy</a></span><br>
+<input type="submit" value="Subscribe Free!" onclick="return f1133543239f();">
+</div>
+</form>
+<script type="text/javascript" language="JavaScript"><!--
+function StripSpacesFromEnds(s) {
+while((s.indexOf(' ',0) == 0) && (s.length> 1)) { s = s.substring(1,s.length); }
+while((s.lastIndexOf(' ') == (s.length - 1)) && (s.length> 1)) { s = s.substring(0,(s.length - 1)); }
+if((s.indexOf(' ',0) == 0) && (s.length == 1)) { s = ''; }
+return s;
+}
+function RemoveEmbeddedSpaces(s) {
+var i = s.indexOf(' ',0);
+while(i > -1)
+{
+s = s.substring(0,i) + s.substring((i + 1),s.length);
+i = s.indexOf(' ',0);
+}
+return s;
+}
+function IsItPresent(s) {
+if(s.length > 0) { return true; }
+return false;
+}
+function CheckEmail(s_email) {
+s_email = StripSpacesFromEnds(s_email);
+s_email = RemoveEmbeddedSpaces(s_email);
+if(IsItPresent(s_email) == false) { return false; }
+if( (s_email.length <6) ||
+    (s_email.indexOf('@',0) < 1) ||
+    (s_email.lastIndexOf('@') != s_email.indexOf('@',0)) ||
+    (s_email.lastIndexOf('@') > (s_email.length - 5)) ||
+    (s_email.indexOf('..',0) > -1) ||
+    (s_email.indexOf('@.',0) > -1) ||
+    (s_email.indexOf('.@',0) > -1) ||
+    (s_email.indexOf(',',0)  > -1) )
+{ return false; }
+return true;
+}
+function f1133543239f() {
+var ret = true;
+if( (document.a1133543239a.subemail.value == 'Email') || (document.a1133543239a.subemail.value.length < 1) ) { alert('Your email address is required.'); ret = false; }
+else if(CheckEmail(document.a1133543239a.subemail.value) == false) { alert('Your email address is formatted incorrectly.'); ret = false; }
+return ret;
+}
+function f211335432392f(k,v) {
+var ev = new String();
+eval('ev = document.a1133543239a.' + k + '.value');
+if(ev == v) { eval('document.a1133543239a.' + k + ".value = ''"); }
+}
+//--></script>
+</div>
 
-<h4>Web Development Library</h4>
-<ul> 
-
-<li><a href="http://bontragerconnection.com/library/cgiindex.shtml">CGI</a> 
- </li><li><a href="http://bontragerconnection.com/library/javascriptindex.shtml">JavaScript</a> 
- </li><li><a href="http://bontragerconnection.com/library/tutorialsindex.shtml">Tutorials</a> 
- </li><li><a href="http://bontragerconnection.com/library/webdevindex.shtml">Web Development</a> 
- </li><li><a href="http://bontragerconnection.com/webmasters/">The WebMaster's Realm</a>
-
-</li></ul>
-
-
-<h4>Web Dev Articles Bank</h4>
- <ul> 
- <li><a href="http://bontragerconnection.com/webdevelopmentarticles.shtml">Tutorials</a>
- </li><li><a href="http://bontragerconnection.com/webdevelopmentarticles.shtml">JavaScript</a>
- </li><li><a href="http://bontragerconnection.com/webdevelopmentarticles.shtml#cgiandformarticles">CGI and Forms</a>
- </li></ul>
-
-
-<h4>WebMaster Tools</h4>
-<ul>
-<li><a href="http://bontragerconnection.com/tools/linkgenerator.shtml">Email Link Generator</a>
-
-</li><li><a href="http://bontragerconnection.com/tools/checkboxcontrols.shtml">Checkbox Controls</a> 
-
-</li><li><a href="http://bontragerconnection.com/tools/RequiredFieldsCheck.shtml">Required Fields Checker</a>
-
-</li><li><i><a href="http://bontragerconnection.com/tools/index.shtml">More like this...</a></i></li></ul>
-
-
-<h4>RSS/XML</h4>
-<ul><li>
-<a href="http://bontragerconnection.com/index.xml"><img src="http://bontragerconnection.com/images/XMLrss.gif" width="49" height="14" border="0"></a>
-</li><li>
+</div>
+<p class="indent"><a href="javascript:ReverseContentDisplay('revealsubform')">
+&gt;&gt; Show Subscription Form
+</a></p>
+<p class="bold">Website Software
+</p><div class="indent">
+<p>
+<a href="http://willmaster.com/master/">Master Series CGI Software</a> 
+</p><p>
+<a href="http://bontragercgi.com">Bontrager CGI</a>
+</p><p>
+<a href="http://willmaster.com/support/">CGI Support</a> 
+</p>
+</div>
+<h4><a href="http://www.bontragerconnection.com/library/">Web Development Library</a></h4>
+<div class="indent">
+<p><a href="http://bontragerconnection.com/library/cgiindex.shtml">CGI</a> 
+</p><p>
+ <a href="http://bontragerconnection.com/library/javascriptindex.shtml">JavaScript</a> 
+ </p><p>
+ <a href="http://bontragerconnection.com/library/tutorialsindex.shtml">Tutorials</a>
+ </p><p> 
+ <a href="http://bontragerconnection.com/library/webdevindex.shtml">Web Development</a> </p>
+</div>
+ <h4><a href="http://bontragerconnection.com/webdevelopmentarticles.shtml">Web Dev Articles Bank</a></h4><h4>
+  <a href="http://bontragerconnection.com/tools/index.shtml">Webmaster Tools Index</a></h4><h4>
+</h4><h4 class="indent">RSS/XML</h4>
+<p>
+<a href="http://bontragerconnection.com/index.xml"><img src="http://bontragerconnection.com/images/XMLrss.gif" width="49" height="14" border="0"></a> <a href="http://bontragerconnection.com/whatsnew/index.shtml">What's New</a>
+</p><p>
 <a href="http://bontragerconnection.com/rrschannels.shtml">The Bontrager Channels</a>
-
-
-<h4><a href="http://bontragerconnection.com/all_the_bontrager_websites.shtml&#10;">All the Bontrager Websites</a></h4>
-</li></ul>
-
-
+</p>
 </div>
 </td></tr></tbody></table>
-</div>
 <div id="footer">
 <p>
 <a href="http://bontragerconnection.com/privacy.shtml">Privacy Statement</a> &nbsp;|&nbsp;
 
+<a href="http://bontragerconnection.com/all_the_bontrager_websites.shtml">The Bontrager Websites</a> &nbsp;|&nbsp;
 <a href="http://lightfocus.com/">About Us</a> &nbsp;|&nbsp;
 
-<a href="http://bontragerconnection.com/contact.shtml">Contact Us</a> &nbsp;|&nbsp;<a href="http://bontragerconnection.com/">Home</a></p>
+<a href="http://bontragerconnection.com/contact.shtml">Contact Us</a> &nbsp;|&nbsp;
+
+<a href="http://bontragerconnection.com/sitemap.html">Site Map</a> &nbsp;|&nbsp;
+
+
+<a href="http://bontragerconnection.com/">Home</a></p>
 
 <p>
 Bontrager Connection, LLC<br>
-Copyright © 1998- 2005 William and Mari Bontrager. All rights reserved.</p>
-</div>
+Copyright © 1998- 2006 William and Mari Bontrager. All rights reserved.</p>
+
 
 <script type="text/javascript" language="JavaScript" src="http://bontragerconnection.com/ClickWatch.js">
 </script>
 </div>
-
+</div>
 
 </body></html>
