learnersdictionary.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 6438,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.66,
  "homepage_snapshot_redirected_domain": "learnersdictionary.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060406060018id_/http://www.learnersdictionary.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060406060018id_/http%3A//learnersdictionary.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "learnersdictionary.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615012223id_/http%3A//www.learnersdictionary.com/privacy.htm",
  "policy_title": "Merriam-Webster's LearnersDictionary.com",
  "policy_url": "learnersdictionary.com/privacy.htm",
  "sha1": "5af4f7a412df071404e71eb461523ab9d1a30ef0",
  "simhash": 10958623602339136245,
  "simhash_updated": false,
  "site_hostname": "learnersdictionary.com",
  "site_url": "http://learnersdictionary.com",
  "smog": 16.24,
  "strict_updated": true,
  "timestamp": "20060615012223",
  "word_count": 1014,
  "year": 2006
}

--- a/l/le/lea/learnersdictionary.com.html
+++ b/l/le/lea/learnersdictionary.com.html
@@ -1,34 +1,57 @@
-<!--The following is the downloaded HTML source of the learnersdictionary.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218000406id_/http%3A//www.learnersdictionary.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the learnersdictionary.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615012223id_/http%3A//www.learnersdictionary.com/privacy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
-<title>Merriam-Webster's LearnersDictionary.com - Privacy Policy</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
+<title>Merriam-Webster's LearnersDictionary.com</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="/esl.css" rel="stylesheet" type="text/css">
+<meta name="keywords" lang="en" content="ESL, EFL, English language learners, English as a second language">
+<meta name="Description" content="Merriam-Webster's language site for adult and teenage non-English speakers features Merriam-Webster's Learner's Word of the Day and interactive language tools with audio.">
+<link href="/learners.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
+
+<div id="banner">
+<table width="100%" cellspacing="0" cellpadding="0" border="0">
+<tbody><tr>
+    <td width="465"><a href="/index.html"><img src="/images/hdr_left_mw_logo.gif" width="465" height="100" alt="Merriam-Webster's LearnersDictionary.com" border="0"></a></td>
+    <td>&nbsp;</td>
+    <td width="290" align="right"><a href="/index.html"><img src="/images/hdr_right_worldimage.gif" width="290" height="100" alt="Connecting the World" border="0"></a></td>
+</tr>
+</tbody></table>
+</div>
+
 <div id="page">
-<div id="banner"><a href="/index.html"><img src="/images/MW_logo.gif" width="95" height="93" alt="Merriam-Webster" border="0"></a><h1><a href="/index.html">Merriam-Webster's LearnersDictionary.com</a></h1></div>
+
+<table width="100%" cellpadding="0" cellspacing="0" border="0">
+	<tbody><tr>
+		<td valign="top" bgcolor="#FFC307" width="150">
 
 	<div id="sidebar_nav">
-		<ul id="nav">
-		<li><a href="/index.html">HOME PAGE</a></li>
-		<li><a href="/wod.htm"><span class="nav_bl"> LEARNER'S </span>WORD <span class="nav_sm">OF THE</span> DAY</a></li>
-		<li><a href="/pron.htm">PERFECT PRONUNCIATION</a></li>
-		<li><a href="/sites.htm"><span class="nav_bl"><span class="nav_sm"> MERRIAM-WEBSTER </span></span>WEB SITES</a></li>
-		<li><a href="/contact.htm">CONTACT US</a></li>
-		<li><a href="/help.htm">SITE HELP</a></li>
-		</ul>
-		
+	<div id="nav">
+		<div class="navitem"><a href="/index.html">Home Page</a></div>
+		<div class="navitem"><a href="/wod.htm">Learner's<br>Word of the Day</a></div>
+		<div class="navitem"><a href="/pron.htm">Perfect Pronunciation</a></div>
+		<div class="navitem"><a href="/langhelp.htm">Language Help</a></div>
+		<div class="navitem"><a href="/titles.htm">Books for Learners</a></div>
+		<div class="navitem"><a href="/sites.htm">Merriam-Webster<br>Web Sites</a></div>
+		<div class="navitem"><a href="/contact.htm">Contact Us</a></div>
+		<div class="navitem"><a href="/help.htm">Site Help</a></div>
 	</div>
+	<a href="/pron.htm"><img src="/images/btn_pron_exercises.gif" width="150" height="30" alt=""></a>
+	</div>
+	
+		</td>
+		<td valign="top">
 
-	<div id="content">
+	<div id="content">	
+
+<!-- begin page content -->
 	
 	<h2>Privacy Policy</h2>
-		
-<p>Merriam-Webster is committed to respecting the privacy of visitors to
+	
+	<p>Merriam-Webster is committed to respecting the privacy of visitors to
 its Web sites. The guidelines below explain some of the steps we have
 taken to protect the privacy of visitors to Merriam-Webster's LearnersDictionary.com and
 its features.</p>
@@ -148,22 +171,30 @@ accepted those changes.</p>
 
 <p>If you have any questions or concerns, please send an e-mail to our 
 <a href="/contact.htm">suggestion box</a>.</p>
-		</div>
-
-
-	   
-	   	<div id="nav_bottom">
-		<strong><a href="/contact.htm">Contact Us</a> &nbsp;&nbsp; <a href="/privacy.htm">Privacy Policy</a> &nbsp;&nbsp; <a href="/help.htm">Site Help</a></strong><br>
-		VISIT OTHER MERRIAM-WEBSTER WEB SITES:<br>
-		<p><a href="http://www.merriam-webstercollegiate.com">MERRIAM-WEBSTERCOLLEGIATE.COM</a> &nbsp; <a href="http://www.merriam-webster.com">Merriam-Webster's LearnersDictionary.com</a> &nbsp; <a href="http://www.merriam-websterunabridged.com">MERRIAM-WEBSTERUNABRIDGED.COM</a> &nbsp; <a href="http://www.wordcentral.com">WORDCENTRAL.COM</a></p>
-		</div>
-	
-		<div id="copyright"><a href="/copyright.htm">© 2005 Merriam-Webster, Incorporated</a></div>
-
+<!-- end page content -->
+	   	
 	</div>
-	
-		
+	 	
+		</td>
+	</tr>
+</tbody></table>
 
+<table width="100%" cellspacing="0" cellpadding="0" border="0">
+	<tbody><tr>
+    	<td>
+
+<div id="nav_bottom">
+		<strong><a href="/contact.htm">Contact Us</a> &nbsp;&nbsp; <a href="/privacy.htm">Privacy Policy</a> &nbsp;&nbsp; <a href="/help.htm">Site Help</a></strong><br>
+		Visit:&nbsp;&nbsp;<a href="http://www.merriam-webster.com">Merriam-Webster Online</a> / <a href="http://www.merriam-webstercollegiate.com">Merriam-WebsterCollegiate.com</a> / <a href="http://unabridged.merriam-webster.com">Merriam-WebsterUnabridged.com</a> / <a href="http://www.wordcentral.com">WordCentral.com</a> / <a href="http://www.word.com">Word.com</a>
+
+		<script language="JavaScript1.2" type="text/javascript" src="/copy.js"></script>
+</div>
+		
+		</td>
+	</tr>
+</tbody></table>	
+
+</div>
 
 
 
