--- a/w/wo/wor/worldseriesofpoker.com.html
+++ b/w/wo/wor/worldseriesofpoker.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldseriesofpoker.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230190211id_/http%3A//www.harrahs.com/about_us/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldseriesofpoker.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615012344id_/http%3A//www.harrahs.com/about_us/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Harrah's - About Us - Privacy Policy</title>
@@ -163,10 +163,10 @@
 	            		  	</span><span class="para">
 	            		  		<a name="top"></a> 
 
-<div align="right"><strong><font size="2">Effective Date:&nbsp;&nbsp;November 3,&nbsp;2005</font></strong></div>
+<div align="right"><strong><font size="2">Effective Date:&nbsp;&nbsp;March 1,&nbsp;2006</font></strong></div>
 
-<b><a href="#corporate">2005 Corporate Privacy Policy</a></b><br>
-<b><a href="#online">2005 Online Privacy Policy</a></b><br>
+<b><a href="#corporate">Corporate Privacy Policy</a></b><br>
+<b><a href="#online">Online Privacy Policy</a></b><br>
 <br>
 If you prefer that we not share your personal information with Joint Marketers, please <a href="http://harrahsent.rqst4.info/dspSurvey.cfm?N=16&amp;SID=21&amp;SEQ=1" target="_blank">click here</a>‚&nbsp;and follow the instructions provided.<br>
 <br>
@@ -177,14 +177,12 @@ If you prefer that we not share your personal information with Joint Marketers, 
 	            		  		<b>INTRODUCTION</b>
 	            		  	</span><span class="para">
 	            		  		<p>Harrah’s Operating Company, Inc. and all of our subsidiaries, affiliates, casinos and resorts have an unwavering commitment to providing outstanding products and services to visitors to our properties.&nbsp; This Privacy Policy explains our practices for the following properties: Harrah’s Phoenix Ak-Chin,<br>
-Harrah’s Rincon, Harrah’s Joliet, Harrah’s Metropolis, Horseshoe Hammond, Harrah’s Bluffs Run, Harrah’s Council Bluffs, Harrah’s Prairie Band, Harrah’s<br>
-Louisiana Downs; Harrah’s Lake Charles, Harrah’s New Orleans, Horseshoe Casino Bossier City, Horseshoe Casino Tunica, Harrah’s North Kansas City, Harrah’s St. Louis, Bill’s Lake Tahoe, Harrah’s Lake Tahoe, Harrah’s Las Vegas, Harrah’s Laughlin, Harrah’s Reno, Harveys Lake Tahoe, Rio All-Suite Hotel &amp; Casino, Harrah’s Atlantic City, Showboat Atlantic City, Harrah’s Cherokee, Harrah’s Chester, Bally’s Las Vegas, Paris Las Vegas, Caesars Palace, Flamingo Las Vegas, Caesars Indiana, Caesars Atlantic City, Bally’s Atlantic City, Grand Casino Gulfport, Grand Casino Biloxi, Grand Casino Tunica, Sheraton Tunica, Flamingo Laughlin, Reno Hilton, Wild Wild West Atlantic City, Claridge Atlantic City, Poarch Creek Atmore and the corporate offices of Harrah’s Operating Company, Inc. (collectively “The Properties” and/or “We”).</p>
+Harrah’s Rincon, Harrah’s Joliet, Harrah’s Metropolis, Horseshoe Hammond, Harrah’s Bluffs Run, Harrah’s Council Bluffs, Harrah’s Prairie Band, Harrah’s Louisiana Downs; Harrah’s Lake Charles, Harrah’s New Orleans, Horseshoe Casino Bossier City, Horseshoe Casino Tunica, Harrah’s North Kansas City, Harrah’s St. Louis, Bill’s Lake Tahoe, Harrah’s Lake Tahoe, Harrah’s Las Vegas, Harrah’s Laughlin, Harrah’s Reno, Harveys Lake Tahoe, Rio All-Suite Hotel &amp; Casino, Harrah’s Atlantic City, Showboat Atlantic City, Harrah’s Cherokee, Harrah’s Chester, Bally’s Las Vegas, Paris Las Vegas, Caesars Palace, Flamingo Las Vegas, Caesars Indiana, Caesars Atlantic City, Bally’s Atlantic City, Grand Casino Gulfport, Grand Casino Biloxi, Grand Casino Tunica, Sheraton Tunica, Reno Hilton, Wild Wild West Atlantic City, Claridge Atlantic City, Poarch Creek Atmore and the corporate offices of Harrah’s Operating Company, Inc. (collectively “The Properties” and/or “We”).</p>
 
 <p></p>
 
 <hr color="#660099" noshade="" size="1">
 <p></p>
-
 	            		  		<br>
 	            		  	</span><span class="parahead">
 	            		  		<a name="corporate"><b>CORPORATE PRIVACY POLICY</b></a>
