--- a/h/ho/hou/houstontx.gov.html
+++ b/h/ho/hou/houstontx.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the houstontx.gov privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215125122id_/http%3A//www.houstontx.gov/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the houstontx.gov privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615012349id_/http%3A//www.houstontx.gov/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>City of Houston &gt; Privacy Policy</title>
@@ -66,33 +66,30 @@
 
 
             <td width="564" valign="top" bgcolor="#FFFFFF"><p class="title"><font face="Verdana, Arial, Helvetica, sans-serif"><img src="content.gif" alt="content" width="5" height="5"><a name="content"></a><span class="breadcrumb"><a href="index.html">City of Houston</a> &gt; Privacy Policy</span></font> </p>
-              <p class="title">Privacy Policy</p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>City of Houston Help Center </b></font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><img src="images/republicbank.jpg" alt="Downtown Photo" width="98" height="146" hspace="5" vspace="5" border="1" align="right">This policy describes the houstontx.gov privacy practices regarding information collected from visitors to the site. It contains information about what data is collected and how that information is used. The houstontx.gov privacy policy applies only to this Web site. When you follow a link to another site, even the sites of state agencies and local governments, this policy will not apply. You should check the privacy policy of each of these sites if you have concerns about how they handle personally identifiable information. This policy may be updated periodically, so please check back from time to time. </font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Collection and Use of Information</b> <br>
+              <table width="550" border="0" align="center">
+                <tbody><tr>
+                  <td><p class="title">Privacy Policy</p>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>City of Houston Help Center </b></font></p>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><img src="images/republicbank.jpg" alt="Downtown Photo" width="98" height="146" hspace="5" vspace="5" border="1" align="right">This policy describes the houstontx.gov privacy practices regarding information collected from visitors to the site. It contains information about what data is collected and how that information is used. The houstontx.gov privacy policy applies only to this Web site. When you follow a link to another site, even the sites of state agencies and local governments, this policy will not apply. You should check the privacy policy of each of these sites if you have concerns about how they handle personally identifiable information. This policy may be updated periodically, so please check back from time to time. </font></p>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Collection and Use of Information</b> <br>
   houstontx.gov does not sell or rent personally identifiable information. Please be aware that when you provide information to any government entity, however, that information may be subject to the Texas Public Information Act and applicable federal legislation. Information about the Texas Public Information Act is available from the Office of the Attorney General at <a href="redirect/oagtexas.html">http://www.oag.state.tx.us/opinopen/open_policy.shtml</a>. Each governmental body must be contacted directly about the records they keep and their use of personally identifiable information. </font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">The houstontx.gov Web site utilizes server logs and log analysis tools to create summary statistics about the use of the Web site. The summary statistics are used for purposes such as assessing what information is of most interest to users, determining technical design specifications, and identifying system performance or problem areas. </font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">For online government transactions conducted on the houstontx.gov Web site, you will be asked to enter certain information about yourself and/or the organization with which you are affiliated. The specifics of this information will vary as required by the type of transaction and the governmental body involved. In each case, the information requested will include the same information that would be requested if you performed the identical transaction in person rather than online. Whenever personal information is requested from you on this site, there will be an indication of whether your disclosure of such information is mandatory or optional. Information collected in the course of the transaction is used for the following purposes: </font></p>
-              <ul>
-                <li class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">To conduct online transactions with the appropriate government entities (e.g., the payment of sales tax or the renewal of a license or permit). </font></li>
-                <li class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">To send you an e-mail confirming your transaction. </font></li>
-                <li class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">To forward new product announcements or content features to you, only if you have chosen to request this service. </font></li>
-              </ul>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">houstontx.gov may be required by law enforcement or judicial authorities to provide personally identifiable information to the appropriate governmental authorities. houstontx.gov fully cooperates with law enforcement agencies in identifying those who use our services for illegal activities. We reserve the right to report to law enforcement agencies any activities that we in good faith believe to be unlawful. </font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Security</b> <br>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">The houstontx.gov Web site utilizes server logs and log analysis tools to create summary statistics about the use of the Web site. The summary statistics are used for purposes such as assessing what information is of most interest to users, determining technical design specifications, and identifying system performance or problem areas. </font></p>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">For online government transactions conducted on the houstontx.gov Web site, you will be asked to enter certain information about yourself and/or the organization with which you are affiliated. The specifics of this information will vary as required by the type of transaction and the governmental body involved. In each case, the information requested will include the same information that would be requested if you performed the identical transaction in person rather than online. Whenever personal information is requested from you on this site, there will be an indication of whether your disclosure of such information is mandatory or optional. Information collected in the course of the transaction is used for the following purposes: </font></p>
+                    <ul>
+                      <li class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">To conduct online transactions with the appropriate government entities (e.g., the payment of sales tax or the renewal of a license or permit). </font></li>
+                      <li class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">To send you an e-mail confirming your transaction. </font></li>
+                      <li class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">To forward new product announcements or content features to you, only if you have chosen to request this service. </font></li>
+                    </ul>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">houstontx.gov may be required by law enforcement or judicial authorities to provide personally identifiable information to the appropriate governmental authorities. houstontx.gov fully cooperates with law enforcement agencies in identifying those who use our services for illegal activities. We reserve the right to report to law enforcement agencies any activities that we in good faith believe to be unlawful. </font></p>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Security</b> <br>
   This site uses a secure server for conducting online transactions. All credit card and other payment information that you transmit to us will be protected by 128-bit encryption technology, provided your browser is properly configured and your computer is operating properly. Security technology requires that you have a reasonably current browser that is capable of supporting 128-bit encryption. Current browsers such as these will activate the appropriate security features when you enter an online transaction through this site. In general, you can determine whether you are on a secure site by looking at the symbol at the bottom of your browser screen. You can be sure you are using a secure server if the key is unbroken or the lock is locked. </font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">We limit employee access to personally identifiable information to only those employees who need access to perform a specific job. All employees are kept up-to-date on our security and privacy practices. </font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Cookies</b> <br>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">We limit employee access to personally identifiable information to only those employees who need access to perform a specific job. All employees are kept up-to-date on our security and privacy practices. </font></p>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Cookies</b> <br>
   Some of the online government transactions hosted by and linked from this site use cookies. A cookie is an extremely small text file that is stored on your computer and created to track specific information. The services hosted on this website (houstontx.gov or ci.houston.tx.us) use cookies to set a session ID - this can be thought of as a kind of name tag, so the service can keep track of your transaction. The cookie will be destroyed after a few minutes of inactivity, successfully completing a transaction or when the browser is closed. If your Web browser does not accept cookies, you will not be able to use the online transactions on this site. For more information on cookies, you may wish to review the U.S. Department of Energy's report on cookies located at <a href="redirect/cookies.html">http://ciac.llnl.gov/ciac/bulletins/i-034.shtml</a>. </font></p>
-              <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Contact Information</b> <br>
+                    <p class="content"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1"><b>Contact Information</b> <br>
   If at any time you are concerned that your information is incorrect and you are unsure how to correct or update it, please contact us at <a href="mailto:webmaster@cityofhouston.net">webmaster@cityofhouston.net</a> or contact the appropriate government partner directly. </font></p></td>
-
-
-
-
-
-
-
+                </tr>
+              </tbody></table>              </td>
           </tr>
 
 
@@ -135,7 +132,7 @@
     <td width="750" height="1" bgcolor="FFFFFF"></td>
     </tr>
     <tr>
-    <td width="750" height="20" bgcolor="C8AC3E"><div align="center" class="footer">© 2005 copyright, City of Houston. All Rights Reserved</div></td>
+    <td width="750" height="20" bgcolor="C8AC3E"><div align="center" class="footer">© 2006 copyright, City of Houston. All Rights Reserved</div></td>
     </tr>
     </tbody></table>
 	</td>
