thetech.org (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2627,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.92,
  "homepage_snapshot_redirected_domain": "thetech.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401081852id_/http://www.thetech.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401081852id_/http%3A//thetech.org",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "thetech.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615012719id_/http%3A//www.thetech.org/about/privacy",
  "policy_title": "The Tech Museum of Innovation | About Us | Privacy Policy",
  "policy_url": "thetech.org/about/privacy",
  "sha1": "4187474274988dd4a28ee36e013afa840600a244",
  "simhash": 14594296458973644846,
  "simhash_updated": false,
  "site_hostname": "thetech.org",
  "site_url": "http://thetech.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615012719",
  "word_count": 434,
  "year": 2006
}

--- a/t/th/the/thetech.org.html
+++ b/t/th/the/thetech.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thetech.org privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218202631id_/http%3A//www.thetech.org/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thetech.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615012719id_/http%3A//www.thetech.org/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
 	<title>The Tech Museum of Innovation | About Us | Privacy Policy</title>
@@ -86,9 +86,16 @@
 <ul id="secondarynav">
 	<li id="mission"><a href="/about/mission/">Our Mission</a></li>
 	<li id="press"><a href="/about/press/">Press Room</a></li>
-		<ul id="press_tertiarynav" class="tertiarynav">
-			<li id="gameon"><a href="/about/rentals/available.php">Game On</a></li>
+			<li id="giving"><a href="/about/giving/">Support The Tech</a>
+		<ul id="giving_tertiarynav" class="tertiarynav">
+			<li id="individual"><a href="/about/giving/individual/">Individual Gifts</a></li>
+			<li id="corporate"><a href="/about/giving/corporate/">Corporate Affiliates</a></li>
+			<li id="foundation"><a href="/about/giving/foundation.php">Foundation and Government Support</a></li>
+			<li id="endowment"><a href="/about/giving/endowment/">Tech Endowment</a></li>
+			<li id="inkind"><a href="/about/giving/inkind/">In-Kind Giving</a></li>
+			<li id="websupport"><a href="/about/giving/web_support.php">Web Site Supporters</a></li>
 		</ul>
+	</li>
 	<li id="factsheet"><a href="/about/factsheet/">Factsheet</a></li>
 	<li id="rentals"><a href="/about/rentals/">Evening Rentals</a>
 		<ul id="rentals_tertiarynav" class="tertiarynav">
@@ -120,7 +127,7 @@
 		<div id="footerinfo">
 			<h4>The Tech Museum of Innovation</h4>
 			<address>201 South Market Street &nbsp;San Jose, CA 95113 &nbsp;(408) 294-TECH</address>
-			<p>© 1994-2005 The Tech Museum of Innovation - All rights reserved.</p>
+			<p>© 1994-2006 The Tech Museum of Innovation - All rights reserved.</p>
 			<ul>
 				<li><a href="/about/mission/">Our Mission</a> | </li>
 				<li><a href="/about/privacy/">Privacy Policy</a> | </li>
