--- a/n/ni/nig/nigella.com.html
+++ b/n/ni/nig/nigella.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nigella.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220122125id_/http%3A//www.nigella.com/detail.asp%3Farticle%3D202) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nigella.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615013124id_/http%3A//nigella.com/detail.asp%3Farticle%3D202) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Nigella Template</title>
