--- a/n/ne/net/netopia.com.html
+++ b/n/ne/net/netopia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netopia.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231225853id_/http%3A//www.netopia.com/corp/privacy_plain.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netopia.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615013207id_/http%3A//netopia.com/corp/privacy_plain.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Netopia - Directions to Netopia</title>
